--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-20 Wed 07:22]
+#+CAPTION: Clock summary at [2019-03-20 Wed 08:33]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *62:14* |       |       | 100.0 |
+| *Total time*                                             | *62:22* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 62:14   |       |       | 100.0 |
-| Active                                                   |         | 62:14 |       | 100.0 |
+| Stories                                                  | 62:22   |       |       | 100.0 |
+| Active                                                   |         | 62:22 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   3.8 |
-| Sprint and product backlog grooming                      |         |       |  7:38 |  12.3 |
+| Sprint and product backlog grooming                      |         |       |  7:46 |  12.5 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   6.1 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.2 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   9.3 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   9.2 |
 | Delete extra files appears broken at present             |         |       |  6:26 |  10.3 |
 | Empty directories should be deleted                      |         |       |  5:37 |   9.0 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   1.8 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   4.3 |
 | Code generation of tests for dogen models                |         |       | 23:22 |  37.5 |
 | Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.6 |
-| Modeline groups as meta-model elements                   |         |       |  2:09 |   3.5 |
+| Modeline groups as meta-model elements                   |         |       |  2:09 |   3.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -233,6 +233,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-03-20 Wed 08:25]--[2019-03-20 Wed 08:33] =>  0:08
     CLOCK: [2019-03-20 Wed 06:31]--[2019-03-20 Wed 07:10] =>  0:39
     CLOCK: [2019-03-18 Tue 20:02]--[2019-03-18 Tue 20:18] =>  0:23
     CLOCK: [2019-03-18 Tue 19:02]--[2019-03-18 Tue 19:25] =>  0:23
