agile: backlog grooming

--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-21 Thu 10:15]
+#+CAPTION: Clock summary at [2019-03-21 Thu 11:57]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *69:43* |       |       | 100.0 |
+| *Total time*                                             | *71:26* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 69:43   |       |       | 100.0 |
-| Active                                                   |         | 69:43 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   3.4 |
-| Sprint and product backlog grooming                      |         |       |  9:57 |  14.3 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   5.4 |
+| Stories                                                  | 71:26   |       |       | 100.0 |
+| Active                                                   |         | 71:26 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   3.3 |
+| Sprint and product backlog grooming                      |         |       |  9:57 |  13.9 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   5.3 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.2 |
-| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.1 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   8.3 |
-| Delete extra files appears broken at present             |         |       |  6:26 |   9.2 |
-| Empty directories should be deleted                      |         |       |  5:37 |   8.1 |
+| Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.0 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |   8.1 |
+| Delete extra files appears broken at present             |         |       |  6:26 |   9.0 |
+| Empty directories should be deleted                      |         |       |  5:37 |   7.9 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   1.6 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   3.8 |
-| Code generation of tests for dogen models                |         |       | 23:22 |  33.5 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   3.7 |
+| Code generation of tests for dogen models                |         |       | 23:22 |  32.7 |
 | Formatters have been incorrectly placed under extraction |         |       |  0:23 |   0.5 |
-| Modeline groups as meta-model elements                   |         |       |  7:19 |  10.5 |
+| Promote extraction entities to meta-model elements       |         |       |  9:02 |  12.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -892,8 +892,10 @@ Notes:
   future.
 - enable_unique_file_names: are we using this?
 
-*** STARTED Modeline groups as meta-model elements                    :story:
+*** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-03-21 Thu 11:54]--[2019-03-21 Thu 12:00] =>  0:06
+    CLOCK: [2019-03-21 Thu 10:16]--[2019-03-21 Thu 11:53] =>  1:37
     CLOCK: [2019-03-20 Wed 17:55]--[2019-03-20 Wed 18:10] =>  0:15
     CLOCK: [2019-03-20 Wed 16:02]--[2019-03-20 Wed 16:55] =>  0:53
     CLOCK: [2019-03-20 Wed 14:34]--[2019-03-20 Wed 14:51] =>  0:17
@@ -903,20 +905,21 @@ Notes:
     CLOCK: [2019-03-19 Tue 15:31]--[2019-03-19 Tue 17:40] =>  2:09
     :END:
 
-As with mappings, profiles and templates, we should make modeline
-groups meta-model elements too. It may require a little bit of
-thinking because they are not simple KVPs - but we also have support
-for arrays in annotations.
+As with mappings, profiles and templates, we should make modelines,
+modeline groups, licences and location strings meta-model elements
+too. It may require a little bit of thinking because they are not
+simple KVPs - but we also have support for arrays in annotations.
 
 The final destination is for users to create modeline configurations
 or reuse the dogen ones.
 
-In theory we should be able to load modelines incrementally, as they
-are only needed for code generation. However, order of references will
-matter because we need to validate references to modelines.
-
 Notes:
 
+- In theory we should be able to load modelines incrementally, as they
+  are only needed for code generation. However, order of references
+  will matter because we need to validate references to
+  modelines. Actually this is not a problem because we will process
+  them after merging. Decorations can be generated at the very end.
 - though it is probably overkill, it would be nice to be able to
   inherit from modelines; then we could define all the common fields
   on a parent.
@@ -933,6 +936,28 @@ Notes:
   good thing about this approach is that we can create a profile for
   these and make it transparent to users
   (=masd::standard_modelines=?).
+
+Merged stories:
+
+*Licences as meta-model elements*
+
+Continuing the trend, licences are also moeta-model elements. We can
+use the comments of a class to convey the licence text. The name
+becomes the license name. Users use named configurations to assign
+licences to elements. All artefacts produced across all facets for an
+element will share the same licence. Users can easily add their own
+licence (at whichever level they choose, product line, product,
+component) and then refer to it. The only change is that they must now
+prefix it with the model name (e.g. =masd::licenses::gpl_v2=).
+
+In theory we should be able to load licences incrementally, as they
+are only needed for code generation. However, order of references will
+matter because we need to validate references to licences.
+
+We should also allow for both:
+
+- full licence: used later at the product level.
+- licence summary: used for preambles in files.
 
 *** Code generate all contexts                                        :story:
 
@@ -990,6 +1015,26 @@ string might look like this:
 
 This may be a useful thing. However, adding dates and dogen version
 etc will cause spurious diffs.
+
+*** Clean up injection element properties                             :story:
+
+When PDMs were deemed a hack, we did a number of quick hacks to
+provide missing information directly in the JSON:
+
+- =can_be_primitive_underlier=
+- =in_global_module=
+- =can_be_enumeration_underlier=
+- =is_default_enumeration_type=
+- =is_associative_container=
+
+And maybe more. These were added as attributes of the JSON and placed
+directly in the injection element. This means its not possible to set
+them from Dia. The right solution for this is as follows:
+
+- add a transform in injection that reads these properties and sets
+  them in the element. This is now possible because we have proper
+  annotation support.
+- move the attributes to meta-data on all JSON models.
 
 *** Split library into JSON and dia                                   :story:
 
@@ -1745,26 +1790,6 @@ chooses the mapping set to use.
 In keeping with the idea that profiles are model-level concepts,
 mappings should be too. We should be able to import mappings in a UML
 diagram and override them or define new ones too.
-
-*** Licences as meta-model elements                                   :story:
-
-Continuing the trend, licences are also moeta-model elements. We can
-use the comments of a class to convey the licence text. The name
-becomes the license name. Users use named configurations to assign
-licences to elements. All artefacts produced across all facets for an
-element will share the same licence. Users can easily add their own
-licence (at whichever level they choose, product line, product,
-component) and then refer to it. The only change is that they must now
-prefix it with the model name (e.g. =masd::licenses::gpl_v2=).
-
-In theory we should be able to load licences incrementally, as they
-are only needed for code generation. However, order of references will
-matter because we need to validate references to licences.
-
-We should also allow for both:
-
-- full licence: used later at the product level.
-- licence summary: used for preambles in files.
 
 *** Profiles as meta-model elements                                   :story:
 
