--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -2874,12 +2874,6 @@ This also means we can transparently change the underlying collection;
 though it would force a recompile, no code should break (e.g. from
 list to vector or array).
 
-*** Clean up external element                                         :story:
-
-Need to add: can_be_primitive_underlier, in_global_module,
-can_be_enumeration_underlier, is_default_enumeration_type,
-is_associative_container
-
 *** Generate file paths as a transform                                :story:
 
 See the comments in the previous sprint.
@@ -8647,6 +8641,15 @@ Links:
 - [[https://stackoverflow.com/questions/36937912/specializing-boostlexical-cast-for-enums-in-boostproperty-maps][specializing boost::lexical_cast for enums in boost::property_maps]]
 - [[https://stackoverflow.com/questions/28828957/enum-to-string-in-modern-c11-c14-c17-and-future-c20][enum to string in modern C++11 / C++14 / C++17 and future C++20]]
 - [[https://stackoverflow.com/questions/21295935/can-a-c-enum-class-have-methods][Can a C++ enum class have methods?]]
+
+*** Allow user supplied enumerator values                             :story:
+
+Now that we have value support in injection, it should be fairly
+straightforward to allow users to supply their own enumeration
+values. When this happens we need to check that:
+
+- they are unique and valid according to enumeration type;
+- they do not class with invalid value.
 
 *** Allow renaming =invalid= enumerator                               :story:
 
